# cronos-med

./: Makefile  README.md  backend-swagger-doc.yaml  docker-compose.yaml  package.json  run.sh
src/: App.tsx  _nav.tsx  main.tsx  routes.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/api/: mod.rs  profesional_api.rs  rocker_launcher.rs  room_api.rs
src-tauri/src/models/: mod.rs  profesional_model.rs  room_model.rs
src-tauri/src/repository/: mod.rs  mongodb_config.rs  profesional_repository.rs  room_repository.rs
src/apis/: base.ts  configuration.ts  profesional-api.tsx  rooms-api.ts
src/apis/models/: index.ts  profesional-list-response.ts  profesional-request.ts  profesional-response.ts  room-list-response.ts  room-request.ts  room-response.ts
src/components/: AppContent.tsx  AppFooter.tsx  AppHeader.tsx  AppSidebar.tsx  AppSidebarNav.tsx
src/i18n/: i18n.tsx
src/i18n/en/: en.json
src/i18n/es/: es.json
src/page/: MainPage.tsx
src/scss/: _variables.scss
src/services/: profesional-service.tsx  room-service.tsx
src/state/: Store.tsx
src/state/models/: ConfigurationState.tsx  ProfesionalState.tsx  RoomState.tsx  SidebarState.tsx
src/state/reducers/: configReducer.tsx  profesionalReducer.tsx  roomReducer.tsx  sidebarReducer.tsx
src/state/sidebar/: sidebarReducer.tsx
src/views/appointment/: Appointment.tsx
src/views/consultingRooms/: ConsultingRooms.tsx  ProfesionalDeleteModal.tsx  RoomModal.tsx
src/views/dashboard/: Dashboard.tsx
src/views/patients/: Patients.tsx
(+3 files in other folders)
