[package]
name = "cronos-med"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.1", features = ["api-all"] }
rocket = {version = "0.5.0-rc.2", features = ["json"] }
rocket_cors = { git = "https://github.com/lawliet89/rocket_cors.git", rev = "54fae070"  }
dotenv = "0.15.0"
mongodb = {version = "2.3.0"}
rocket_db_pools = {version = "0.1.0-rc.2", features = ["mongodb"] }
uuid = {version = "1.2.2", features = [
                                        "v4",                # Lets you generate random UUIDs
                                        "fast-rng",          # Use a faster (but still sufficiently random) RNG
                                        "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
                                    ] }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
